# fswrapper

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
cmake/: boost.cmake
src/: CMakeLists.txt
src/usadamasa/fswrapper/: file_finder.cpp  file_finder.h
test/: CMakeLists.txt
test/usadamasa/fswrapper/: file_finder_test.cpp
